--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "antd": "^5.12.2",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
