--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "@rneui/base": "^4.0.0-rc.7",
-    "@rneui/themed": "^4.0.0-rc.8",
+    "@rneui/base": "^0.0.0-edge.2",
+    "@rneui/themed": "^0.0.0-edge.2",
     "antd": "^5.12.2",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
@@ -24,7 +24,9 @@
     "react-native-pager-view": "6.2.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-tab-view": "^3.5.2"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
